--- a/main/index/index.html
+++ b/main/index/index.html
@@ -20,10 +20,10 @@
 
     <nav>
         <ul id="nav_links" class="nav-links" class="sticky">
-            <li><a href="https://www.duolingo.com/" target="_blank">About</a></li>
-            <li><a href="https://www.duolingo.com/" target="_blank">Projects</a></li>
-            <li><a href="https://www.duolingo.com/" target="_blank">Curiosities</a></li>
-            <li><a href="https://drive.google.com/file/d/1E5OBFmlLPZWMCZekXk8DVBIfQLOaGTCW/view" target="_blank">CV</a></li>
+            <li><a href="/main/about/about.html">About</a></li>
+            <li><a href="/main/projects/projects.html">Projects</a></li>
+            <li><a href="/main/curiosities/curiosities.html">Curiosities</a></li>
+            <li><a href="https://drive.google.com/file/d/1KEbk2QwithYjgFN-opDjUUqvmH4jWXTK/view?usp=sharing" target="_blank">CV</a></li>
         </ul>
     </nav>
 
@@ -44,7 +44,7 @@
             </h1>
         </div>
             <div class="summary_button">
-                <a href="skills.html"><span>about me</span></a>
+                <a href="/main/about/about.html"><span>about me</span></a>
             </div>
         </div>
         <a href="#projects" class="arrow">
@@ -62,7 +62,7 @@
         </div>
         <div class="image1">
             <img src="images/personal.png">
-            <a href="https://www.duolingo.com" target="_blank">
+            <a href="/main/projects/projects.html">
                 <div class="image_overlay1">
                     <div class="image_title1">Personal</div>                        
                 </div>
@@ -72,7 +72,7 @@
 
         <div class="image2">
             <img src="images/personal.png">
-            <a href="https://www.duolingo.com" target="_blank">
+            <a href="/main/projects/projects.html">
                 <div class="image_overlay2">
                     <div class="image_title2">Collaborations</div>
                 </div>
@@ -81,7 +81,7 @@
 
         <div class="image3">
             <img src="images/personal.png">
-            <a href="https://www.duolingo.com" target="_blank">
+            <a href="/main/projects/projects.html">
                 <div class="image_overlay3">
                     <div class="image_title3">Other Creations</div>
                 </div>
@@ -94,25 +94,25 @@
 
         <div class="row1">
             <div class="bingxiling">
-                <a href="https://www.duolingo.com" target="_blank">
+                <a href="/main/projects/projects.html">
                     <img src="images/bingxiling.png">
                 </a>
             </div>
 
             <div class="coolapp">
-                <a href="https://www.duolingo.com" target="_blank">
+                <a href="/main/projects/projects.html">
                     <img src="images/coolapp.png">
                 </a>
             </div>
         </div>
         <div class="row2">
             <div class="model">
-                <a href="https://www.duolingo.com" target="_blank">
+                <a href="/main/projects/projects.html">
                     <img src="images/3dmodel.png">
                 </a>
             </div>
             <div class="projects_button">
-                <a href="https://www.duolingo.com"><span>view all projects</span></a>
+                <a href="/main/projects/projects.html"><span>view all projects</span></a>
             </div>
         </div>
     </div>
@@ -128,14 +128,14 @@
 
         <div class="inspirations">
             <div class="inspirations_title">
-                <a href="https://www.duolingo.com"><h3 class="thetitle">inspirations</h3></a>
+                <a href="/main/curiosities/curiosities.html"><h3 class="thetitle">inspirations</h3></a>
                 <p>a curation of people, topics, and other things that inspire me to innovate</p>
             </div>
             <div class="line1"> 
                 <p>_____________</p>
             </div>
             <div class="inspirations_image">
-                <a href="https://www.duolingo.com">
+                <a href="/main/curiosities/curiosities.html">
                     <img src="images/placeholder.jpg">
                 </a>
             </div>
@@ -143,14 +143,14 @@
 
         <div class="todayi">
             <div class="todayi_title">
-                <a href="https://www.duolingo.com"><h3 class="thetitle2">today i...</h3></a>
+                <a href="/main/curiosities/curiosities.html"><h3 class="thetitle2">today i...</h3></a>
                 <p>intellectual blog of things I learn everyday</p>
             </div>
             <div class="line2"> 
                 <p>_____________</p>
             </div>
             <div class="todayi_image">
-                <a href="https://www.duolingo.com">
+                <a href="/main/curiosities/curiosities.html">
                     <img src="images/placeholder.jpg">
                 </a>
             </div>
@@ -158,14 +158,14 @@
 
         <div class="rabbit">
             <div class="rabbit_title">
-                <a href="https://www.duolingo.com"><h3 class="thetitle3">rabbit holes</h3></a>
+                <a href="/main/curiosities/curiosities.html"><h3 class="thetitle3">rabbit holes</h3></a>
                 <p>my interest, fascinations, and topics that make me dive into rabbit holes</p>
             </div>
             <div class="line3"> 
                 <p>_____________</p>
             </div>
             <div class="rabbit_image">
-                <a href="https://www.duolingo.com">
+                <a href="/main/curiosities/curiosities.html">
                     <img src="images/placeholder.jpg">
                 </a>
             </div>
@@ -173,14 +173,14 @@
 
         <div class="piano">
             <div class="piano_title">
-                <a href="https://www.duolingo.com"><h3 class="thetitle4">piano</h3></a>
+                <a href="/main/curiosities/curiosities.html"><h3 class="thetitle4">piano</h3></a>
                 <p>my experience of playing an instrument for over 10 years, and as a classical music competitor</p>
             </div>
             <div class="line4"> 
                 <p>_____________</p>
             </div>
             <div class="piano_image">
-                <a href="https://www.duolingo.com">
+                <a href="/main/curiosities/curiosities.html">
                     <img src="images/placeholder.jpg">
                 </a>
             </div>
@@ -189,7 +189,7 @@
 
     </div>
 
-    <script src="./index.js"></script>
+    <script src="/main/index.js"></script>
 
 </body>
 
