--- a/projects/projects.html
+++ b/projects/projects.html
@@ -16,9 +16,9 @@
 
     <nav>
         <ul id="nav_links" class="nav-links" class="sticky">
-            <li><a href="/main/about/about.html">About</a></li>
-            <li><a href="/main/projects/projects.html">Projects</a></li>
-            <li><a href="/main/curiosities/curiosities.html">Curiosities</a></li>
+            <li><a href="/about/about.html">About</a></li>
+            <li><a href="/projects/projects.html">Projects</a></li>
+            <li><a href="/curiosities/curiosities.html">Curiosities</a></li>
             <li><a href="https://drive.google.com/file/d/1KEbk2QwithYjgFN-opDjUUqvmH4jWXTK/view?usp=sharing" target="_blank">CV</a></li>
         </ul>
     </nav>
@@ -127,7 +127,7 @@
         </div>
     </div>
 
-    <script src="/main/index.js"></script>
+    <script src="/index.js"></script>
 </body>
 
 </html>
