--- a/projects/projects.html
+++ b/projects/projects.html
@@ -14,20 +14,10 @@
 <body>
     <div class="cursor"></div>
 
-    <nav>
-        <ul id="nav_links" class="nav-links" class="sticky">
-            <li><a href="/about/about.html">About</a></li>
-            <li><a href="/projects/projects.html">Projects</a></li>
-            <li><a href="/curiosities/curiosities.html">Curiosities</a></li>
-            <li><a href="https://drive.google.com/file/d/1KEbk2QwithYjgFN-opDjUUqvmH4jWXTK/view?usp=sharing" target="_blank">CV</a></li>
-        </ul>
-    </nav>
-
-
     <div class="projects">
         <h1 class="header">P R O J E C T S</h1>
 
-        <div class="item">
+        <div class="item" id="oohlala">
             <div class="image1">
                 <image src="images/oohlala.png"></image>
             </div>
@@ -38,7 +28,7 @@
             </div>
         </div>
 
-        <div class="item">
+        <div class="item" id="research">
             <div class="description2">
                 <h2>Creative Coding Research</h2>
                 <p>Researched-based ArcGIS Story Map discussing the implications of creative computing and artificial intelligence to society</p>
@@ -49,7 +39,7 @@
             </div>
         </div>
 
-        <div class="item">
+        <div class="item" id="web">
             <div class="image1">
                 <image src="images/foodymoody.png"></image>
             </div>
@@ -60,7 +50,7 @@
             </div>
         </div>
 
-        <div class="item">
+        <div class="item" id="globalcitizen">
             <div class="description2">
                 <h2>Global Citizen</h2>
                 <p>Interactive curriculum that educates students about culture with modules about the languages, history, modern world connections, and stereotypes of different global regions</p>
@@ -115,17 +105,30 @@
             </div>
         </div>
 
-        <div class="item">
+        <div class="item" id="creations">
             <div class="image1">
-                <image src="images/skills.png"></image>
+                <image src="images/3d.png"></image>
             </div>
             <div class="description1">
+                <h2>3-D Modeled Miniature City</h2>
+                <p>Utilized Autodesk Maya Software to 3-D model, render, and animate a bus and a surrounding miniature city</p>
+                <a href="" target="_blank" class="button">more</a>
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="description2">
                 <h2>Skills For Tomorrow — Web Developer</h2>
                 <p>Curated virtual toolkit that aims to equip young people with the necessary resources and information that they need in order to navigate our rapidly-changing workforce and college</p>
                 <a href="https://shaunpaulthomas.wixsite.com/sixfeetskills" target="_blank" class="button">more</a>
             </div>
+            <div class="image2">
+                <image src="images/skills.png"></image>
+            </div>
         </div>
     </div>
+
+</div>
 
     <script src="/index.js"></script>
 </body>
