--- a/index.html
+++ b/index.html
@@ -18,15 +18,6 @@
         </a>
     </div> -->
 
-    <nav>
-        <ul id="nav_links" class="nav-links" class="sticky">
-            <li><a href="about/about.html">About</a></li>
-            <li><a href="projects/projects.html">Projects</a></li>
-            <li><a href="curiosities/curiosities.html">Curiosities</a></li>
-            <li><a href="https://drive.google.com/file/d/1KEbk2QwithYjgFN-opDjUUqvmH4jWXTK/view?usp=sharing" target="_blank">CV</a></li>
-        </ul>
-    </nav>
-
     <div class="cover">
         <img src="images/cover background.png">
     </div>
@@ -43,10 +34,7 @@
                 order to broaden my perspective of the world and its people.
             </h1>
         </div>
-            <div class="summary_button">
-                <a href="/about/about.html"><span>about me</span></a>
-            </div>
-        </div>
+ 
         <a href="#projects" class="arrow">
             <!-- <img src="arrow.png"> -->
         </a>
@@ -61,10 +49,10 @@
             <img src="images/projects.png">
         </div>
         <div class="image1">
-            <img src="images/personal.png">
-            <a href="/projects/projects.html">
+            <img src="images/personal2.png">
+            <a href="/projects/projects.html#web">
                 <div class="image_overlay1">
-                    <div class="image_title1">Personal</div>                        
+                    <div class="image_title1">Web Development</div>                        
                 </div>
             </a>
         </div>
@@ -72,16 +60,16 @@
 
         <div class="image2">
             <img src="images/personal.png">
-            <a href="/projects/projects.html">
+            <a href="/projects/projects.html#research">
                 <div class="image_overlay2">
-                    <div class="image_title2">Collaborations</div>
+                    <div class="image_title2">Research</div>
                 </div>
             </a>
         </div>
 
         <div class="image3">
-            <img src="images/personal.png">
-            <a href="/projects/projects.html">
+            <img src="images/personal3.png">
+            <a href="/projects/projects.html#creations">
                 <div class="image_overlay3">
                     <div class="image_title3">Other Creations</div>
                 </div>
@@ -93,21 +81,21 @@
         </div>
 
         <div class="row1">
-            <div class="bingxiling">
-                <a href="/projects/projects.html">
+            <div class="bingxiling border">
+                <a href="/projects/projects.html#oohlala">
                     <img src="images/bingxiling.png">
                 </a>
             </div>
 
-            <div class="coolapp">
-                <a href="/projects/projects.html">
+            <div class="coolapp border">
+                <a href="/projects/projects.html#globalcitizen">
                     <img src="images/coolapp.png">
                 </a>
             </div>
         </div>
-        <div class="row2">
+        <div class="row2 border">
             <div class="model">
-                <a href="/projects/projects.html">
+                <a href="/projects/projects.html#creations">
                     <img src="images/3dmodel.png">
                 </a>
             </div>
@@ -115,78 +103,6 @@
                 <a href="/projects/projects.html"><span>view all projects</span></a>
             </div>
         </div>
-    </div>
-
-    <div class="slant2">
-        <img src="images/slant2.png">
-    </div>
-
-    <div class="curiosities">
-        <div class="curiosities_title">
-            <img src="images/curiosities.png">
-        </div>
-
-        <div class="inspirations">
-            <div class="inspirations_title">
-                <a href="/curiosities/curiosities.html"><h3 class="thetitle">inspirations</h3></a>
-                <p>a curation of people, topics, and other things that inspire me to innovate</p>
-            </div>
-            <div class="line1"> 
-                <p>_____________</p>
-            </div>
-            <div class="inspirations_image">
-                <a href="/curiosities/curiosities.html">
-                    <img src="images/placeholder.jpg">
-                </a>
-            </div>
-        </div>
-
-        <div class="todayi">
-            <div class="todayi_title">
-                <a href="/curiosities/curiosities.html"><h3 class="thetitle2">today i...</h3></a>
-                <p>intellectual blog of things I learn everyday</p>
-            </div>
-            <div class="line2"> 
-                <p>_____________</p>
-            </div>
-            <div class="todayi_image">
-                <a href="/curiosities/curiosities.html">
-                    <img src="images/placeholder.jpg">
-                </a>
-            </div>
-        </div>
-
-        <div class="rabbit">
-            <div class="rabbit_title">
-                <a href="/curiosities/curiosities.html"><h3 class="thetitle3">rabbit holes</h3></a>
-                <p>my interest, fascinations, and topics that make me dive into rabbit holes</p>
-            </div>
-            <div class="line3"> 
-                <p>_____________</p>
-            </div>
-            <div class="rabbit_image">
-                <a href="/curiosities/curiosities.html">
-                    <img src="images/placeholder.jpg">
-                </a>
-            </div>
-        </div>
-
-        <div class="piano">
-            <div class="piano_title">
-                <a href="/curiosities/curiosities.html"><h3 class="thetitle4">piano</h3></a>
-                <p>my experience of playing an instrument for over 10 years, and as a classical music competitor</p>
-            </div>
-            <div class="line4"> 
-                <p>_____________</p>
-            </div>
-            <div class="piano_image">
-                <a href="/curiosities/curiosities.html">
-                    <img src="images/placeholder.jpg">
-                </a>
-            </div>
-        </div>
-    </div>
-
     </div>
 
     <script src="index.js"></script>
