--- a/projects/projects.html
+++ b/projects/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>projects</title>
     <link rel="stylesheet" href="projects.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,10 @@
             <div class="description1">
                 <h2>Ooh La La Panini</h2>
                 <p>Created a website, branding kit, and site wireframe with a restaurant ordering system for Ooh La La Panini</p>
-                <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">more</a>
+                <div class="morebuttons">
+                    <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">my process</a>
+                    <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">visit site</a>
+                </div>
             </div>
         </div>
 
