--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="projects.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Judson&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -103,6 +107,22 @@
                 <a href="/projects/projects.html"><span>view all projects</span></a>
             </div>
         </div>
+    </div>
+
+    <div class="slant2">
+        <img src="images/slant2.png">
+    </div>
+
+    <div class="curiosities">
+       <div class="title">
+            <h1>hard skills.</h1>
+            <p>technologies and tools that I use for my creations</p>
+       </div>
+
+       <div class="iconlist">
+        <image src="/images/row1.png"></image>
+        <image src="/images/row2.png"></image>
+       </div>
     </div>
 
     <script src="index.js"></script>
