clean up changes

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 order to broaden my perspective of the world and its people.
             </h1>
         </div>
+
+        <div class="summary_button">
+            <a href="" target="_blank">curriculm vitae</a>
+        </div>
  
         <a href="#projects" class="arrow">
             <!-- <img src="arrow.png"> -->
@@ -50,9 +54,14 @@
     </div>
 
     <div class="projects">
-        <div class="projects_image">
+        <!-- <div class="projects_image">
             <img src="images/projects.png">
+        </div> -->
+        <div class="title projectstitle">
+            <h1>projects.</h1>
+            <p>web development, digital media designs, ideations</p>
         </div>
+
         <div class="image1">
             <img src="images/personal2.png">
             <a href="/projects/projects.html#web">
