--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="projects.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Judson&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Belleza&family=Judson&display=swap" rel="stylesheet">
     <link rel="icon" href="/images/favicon.webp">
 </head>
 
@@ -41,7 +41,7 @@
         </div>
 
         <div class="summary_button">
-            <a href="" target="_blank">curriculm vitae</a>
+            <a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">curriculm vitae</a>
         </div>
  
         <a href="#projects" class="arrow">
@@ -135,17 +135,29 @@
        </div>
     </div>
 
+    <footer>
+        <div class="footer_text">
+            <p>© 2022 | Designed and coded by Alyssa Cheng</p>
+        </div>
+        <div class="footer_icons">
+            <a href="mailto:alyssaycheng15@gmail.com">
+                <image src="/images/mail.png"></image>
+            </a>
+            <a href="tel:6612108098">
+                <image src="/images/phone.png"></image>
+            </a>
+            <a href="https://github.com/alyssacheng15">
+                <image src="/images/github.png"></image>
+            </a>
+            <a href="www.linkedin.com/in/alyssa-cheng">
+                <image src="/images/linkedin.png"></image>
+            </a>
+        </div>
+    
+    </footer>
+
     <script src="index.js"></script>
 
 </body>
-
-<footer>
-    <div class="footer_text">
-        <h3>Contact</h3>
-        <p>Email: alyssacheng1234@gmail.com</p>
-        <p>Phone: (661) 210-8098</p>
-        <p>Valencia, CA</p>
-    </div>
-</footer>
 
 </html>
