--- a/projects/projects.html
+++ b/projects/projects.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="projects.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Judson&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Belleza&family=Judson&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,10 +23,11 @@
             </div>
             <div class="description1">
                 <h2>Ooh La La Panini</h2>
+                <h4>web design, ui/ux, figma wireframing</h4>
                 <p>Created a website, branding kit, and site wireframe with a restaurant ordering system for Ooh La La Panini</p>
                 <div class="morebuttons">
-                    <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">my process</a>
-                    <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">visit site</a>
+                    <a href="/projects/items/oohlala.html" class="button">my process</a>
+                    <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button">visit site</a>
                 </div>
             </div>
         </div>
@@ -34,8 +35,10 @@
         <div class="item" id="research">
             <div class="description2">
                 <h2>Creative Coding Research</h2>
+                <h4>research in tech, digital storytelling</h4>
                 <p>Researched-based ArcGIS Story Map discussing the implications of creative computing and artificial intelligence to society</p>
-                <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
                 <image src="./images/research.png"></image>
@@ -48,16 +51,20 @@
             </div>
             <div class="description1">
                 <h2>Foody Moody</h2>
+                <h4>react, javascript, html/css, yelp api, postman</h4>
                 <p>Web-based application coded with React that allows users to discover small business restaurants and cuisines in SCV based on their mood</p>
-                <a href="https://foodymoodyscv.netlify.app/" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="https://foodymoodyscv.netlify.app/" target="_blank" class="button">visit site</a>
             </div>
         </div>
 
         <div class="item" id="globalcitizen">
             <div class="description2">
                 <h2>Global Citizen</h2>
+                <h4>research, webflow, web design, digital storytelling</h4>
                 <p>Interactive curriculum that educates students about culture with modules about the languages, history, modern world connections, and stereotypes of different global regions</p>
-                <a href="https://www.figma.com/proto/ymlnzO5eSBXtQ9ctb6qyfw/home-page?node-id=306%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=306%3A3" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="https://www.figma.com/proto/ymlnzO5eSBXtQ9ctb6qyfw/home-page?node-id=306%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=306%3A3" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
                 <image src="./images/globalcitizen.png"></image>
@@ -70,16 +77,20 @@
             </div>
             <div class="description1">
                 <h2>Personal Website</h2>
+                <h4>html/css, javascript, figma wireframing, web dev</h4>
                 <p>Process of (this!) coded personal portfolio website — branding, typography, wireframing, and code</p>
-                <a href="" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="alyssacheng.space" target="_blank" class="button">visit site</a>
             </div>
         </div>
 
         <div class="item">
             <div class="description2">
                 <h2>Rise</h2>
+                <h4>research, product design, business pitch, web design</h4>
                 <p>New curriculum for elementary school students in SCV regarding sun protection and a hypothetical business pitch for a more accessible sunscreen product</p>
-                <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
                 <image src="./images/comingsoon.png"></image>
@@ -92,16 +103,20 @@
             </div>
             <div class="description1">
                 <h2>Design Your World</h2>
+                <h4>html/css, collaborative web design, figma</h4>
                 <p>Website coded with a team that showcases students' 3-D designed "safe spaces" that represent escapism</p>
-                <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">visit site</a>
             </div>
         </div>
 
         <div class="item">
             <div class="description2">
                 <h2>SKIN — Web Developer</h2>
+                <h4>collaborative web design, figma</h4>
                 <p>Web platform for a project that exposes the racism and prejudice surrounding "disgusting" skin conditions</p>
-                <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
                 <image src="./images/comingsoon.png"></image>
@@ -114,16 +129,20 @@
             </div>
             <div class="description1">
                 <h2>3-D Modeled Miniature City</h2>
+                <h4>autodesk maya, arnold render, 3-D design</h4>
                 <p>Utilized Autodesk Maya Software to 3-D model, render, and animate a bus and a surrounding miniature city</p>
-                <a href="" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="" target="_blank" class="button">visit site</a>
             </div>
         </div>
 
         <div class="item">
             <div class="description2">
                 <h2>Skills For Tomorrow — Web Developer</h2>
+                <h4>collaborative web design, figma</h4>
                 <p>Curated virtual toolkit that aims to equip young people with the necessary resources and information that they need in order to navigate our rapidly-changing workforce and college</p>
-                <a href="https://shaunpaulthomas.wixsite.com/sixfeetskills" target="_blank" class="button">more</a>
+                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="https://shaunpaulthomas.wixsite.com/sixfeetskills" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
                 <image src="images/skills.png"></image>
@@ -132,6 +151,27 @@
     </div>
 
 </div>
+
+<footer>
+    <div class="footer_text">
+        <p>© 2022 | Designed and coded by Alyssa Cheng</p>
+    </div>
+    <div class="footer_icons">
+        <a href="mailto:alyssaycheng15@gmail.com">
+            <image src="/images/mail.png"></image>
+        </a>
+        <a href="tel:6612108098">
+            <image src="/images/phone.png"></image>
+        </a>
+        <a href="https://github.com/alyssacheng15">
+            <image src="/images/github.png"></image>
+        </a>
+        <a href="www.linkedin.com/in/alyssa-cheng">
+            <image src="/images/linkedin.png"></image>
+        </a>
+    </div>
+
+</footer>
 
     <script src="/index.js"></script>
 </body>
