--- a/projects/items/oohlala.html
+++ b/projects/items/oohlala.html
@@ -17,6 +17,7 @@
             <h1>OOH LA LA PANINI</h1>
             <h4>Ooh La La Panini is a small restaurant in Santa Clarita that specializes in gourmet café style food. The goal of this project was to create an interactive website that showcases their restaurant, as well as develop an ordering system for online purchases.</h4>
             <p>role: ui/ux design, web design, figma wireframing, branding guide, presentation</p>
+            <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button">view live</a>
         </div>
         <image src="/projects/images/sideoohlala.png"></image>
     </div>
@@ -33,7 +34,7 @@
     </div>
 
     <div class="colors">
-        <h1 class="title">#2 colors and typography</h1>
+        <h1 class="title">#2 colors and typography.</h1>
         <div class="color">
             <image src="/projects/images/oohlalacolor.png"></image>
             <p>The colors were selected from their Instagram account and Yelp page. We incorporated six different shades that represent their minimalistic theme.</p>
@@ -45,20 +46,21 @@
     </div>
 
     <div class="figma">
-        <h1 class="title">#3 wireframing with figma</h1>
+        <h1 class="title">#3 wireframing with figma.</h1>
         <p class="text">We used Figma, an application for user interface design, to wireframe and plot out the main points of the site.</p>
         <image class="image" src="/projects/images/oohlalafigma.png"></image>
     </div>
 
     <div class="wix">
-        <h1 class="title">#4 developing with wix</h1>
+        <h1 class="title">#4 developing with wix.</h1>
         <p class="text">Since the owners had to continuously update the site and use the online ordering interface, we choose to develop the website with Wix.</p>
         <video src="/projects/images/oohlalavid.mov" autoplay muted loop></video>
+        <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button2">view live</a>
     </div>
 
     <div class="buttons">
         <a href="">previous project</a>
-        <a href="">next project</a>
+        <a href="creativecoding.html">next project</a>
     </div>
 
 
