--- a/projects/projects.html
+++ b/projects/projects.html
@@ -37,7 +37,7 @@
                 <h2>Creative Coding Research</h2>
                 <h4>research in tech, digital storytelling</h4>
                 <p>Researched-based ArcGIS Story Map discussing the implications of creative computing and artificial intelligence to society</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/creativecoding.html" class="button">my process</a>
                 <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
