--- a/projects/items/creativecoding.html
+++ b/projects/items/creativecoding.html
@@ -23,12 +23,11 @@
     </div>
 
     <div class="finalproduct">
-        <h1 class="title">the final product.</h1>
         <image class="image" src="/projects/images/ccfinal.png"></image>
     </div>
 
     <div class="colors">
-        <h1 class="title">#1 research.</h1>
+        <h1 class="title">research.</h1>
         <div class="color">
             <image src="/projects/images/ccresearch1.png"></image>
             <p>I did research on the history of computer science and created a timeline of important events. The information was organized on Milanote, a tool for organizing creative projects.</p>
@@ -40,19 +39,19 @@
     </div>
 
     <div class="figma">
-        <h1 class="title">#2 asking an ai.</h1>
+        <h1 class="title">asking an ai.</h1>
         <p class="text">Since I was doing research about artificial intelligence, I was curious to see what an actual AI would think of the impact of creative coding to the world. I used ChatGPT, an advanced chatbot made by OpenAI.</p>
         <image src="/projects/images/ccai.png"></image>
     </div>
 
     <div class="presentation">
-        <h1 class="title">#3 analyzing.</h1>
+        <h1 class="title">analyzing data.</h1>
         <image class="image" src="/projects/images/ccanalyze.png"></image>
         <p class="text">After gathering all the research, I analyzed the information regarding the ethics of AI. </p>
     </div>
 
     <div class="wix">
-        <h1 class="title">#4 putting it together.</h1>
+        <h1 class="title">putting it together.</h1>
         <p class="text">Using ArcGIS Storymaps, I combined all of my research and analyses into an interactive storytelling experience.</p>
         <video src="/projects/images/ccvid.mov" autoplay muted loop></video>
         <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button2">view live</a>
@@ -60,7 +59,7 @@
 
     <div class="buttons">
         <a href="oohlala.html">previous project</a>
-        <a href="">next project</a>
+        <a href="foodymoody.html">next project</a>
     </div>
 
 
