--- a/projects/items/oohlala.html
+++ b/projects/items/oohlala.html
@@ -23,18 +23,17 @@
     </div>
 
     <div class="finalproduct">
-        <h1 class="title">the final product.</h1>
         <image class="image" src="/projects/images/finaloohlala.png"></image>
     </div>
 
     <div class="presentation">
-        <h1 class="title">#1 presentation + brand guide.</h1>
+        <h1 class="title">presentation + brand guide.</h1>
         <image class="image" src="/projects/images/brandoohlala.png"></image>
         <p class="text">We created a brand kit and presentation for the owners of Ooh La La Panini, taking inspiration from their menu and their store aesthetic. </p>
     </div>
 
     <div class="colors">
-        <h1 class="title">#2 colors and typography.</h1>
+        <h1 class="title">colors and typography.</h1>
         <div class="color">
             <image src="/projects/images/oohlalacolor.png"></image>
             <p>The colors were selected from their Instagram account and Yelp page. We incorporated six different shades that represent their minimalistic theme.</p>
@@ -46,13 +45,13 @@
     </div>
 
     <div class="figma">
-        <h1 class="title">#3 wireframing with figma.</h1>
+        <h1 class="title">wireframing with figma.</h1>
         <p class="text">We used Figma, an application for user interface design, to wireframe and plot out the main points of the site.</p>
         <image class="image" src="/projects/images/oohlalafigma.png"></image>
     </div>
 
     <div class="wix">
-        <h1 class="title">#4 developing with wix.</h1>
+        <h1 class="title">developing with wix.</h1>
         <p class="text">Since the owners had to continuously update the site and use the online ordering interface, we choose to develop the website with Wix.</p>
         <video src="/projects/images/oohlalavid.mov" autoplay muted loop></video>
         <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button2">view live</a>
