--- a/projects/projects.html
+++ b/projects/projects.html
@@ -53,7 +53,7 @@
                 <h2>Foody Moody</h2>
                 <h4>react, javascript, html/css, yelp api, postman</h4>
                 <p>Web-based application coded with React that allows users to discover small business restaurants and cuisines in SCV based on their mood</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/foodymoody.html" class="button">my process</a>
                 <a href="https://foodymoodyscv.netlify.app/" target="_blank" class="button">visit site</a>
             </div>
         </div>
