--- a/projects/items/foodymoody.html
+++ b/projects/items/foodymoody.html
@@ -18,6 +18,7 @@
             <h4>A platform that allows users in Santa Clarita to search for local small businesses and specific cuisines based on a mood quiz</h4>
             <p>role: coding in react, javascript, html/css, yelp api, postman</p>
             <a href="https://foodymoodyscv.netlify.app/" target="_blank" class="button">view live</a>
+            <a href="https://github.com/alyssacheng15/foodymoody" target="_blank" class="button button3">github repo</a>
         </div>
         <image src="/projects/images/fmside.png"></image>
     </div>
@@ -59,7 +60,7 @@
 
     <div class="buttons">
         <a href="creativecoding.html">previous project</a>
-        <a href="">next project</a>
+        <a href="globalcitizen.html">next project</a>
     </div>
 
 
