--- a/projects/items/globalcitizen.html
+++ b/projects/items/globalcitizen.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creative Coding</title>
-    <link rel="stylesheet" href="creativecoding.css">
+    <title>Global Citizen</title>
+    <link rel="stylesheet" href="globalcitizen.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Belleza&family=Judson&display=swap" rel="stylesheet">
 </head>
 
@@ -14,32 +14,32 @@
 
     <div class="intro">
         <div class="introtext">
-            <h1>Creative Coding Research</h1>
-            <h4>Creative coding and AI for social change — in-depth research on the positive and negative impacts of creative computing and artificial intelligence on societal transformation</h4>
-            <p>role: research into coding and ai, arcGIS storymaps, digital storytelling</p>
-            <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button">view live</a>
+            <h1>Global Citizen</h1>
+            <h4>A project combining cultural values and web development — two of my favorite things. Along with a peer, we developed an online interactive curriculum that teaches young people how complex modern societies really are.</h4>
+            <p>role: research into culture and international relations, web development</p>
+            <a href="https://www.figma.com/proto/ymlnzO5eSBXtQ9ctb6qyfw/home-page?node-id=306%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=306%3A3" target="_blank" class="button">view live</a>
         </div>
-        <image src="/projects/images/ccside.jpeg"></image>
+        <image src="/projects/images/gcside.png"></image>
     </div>
 
     <div class="finalproduct">
-        <image class="image image2" src="/projects/images/ccfinal.png"></image>
+        <image class="image1" src="/projects/images/computer.png"></image>
     </div>
 
     <div class="colors">
         <h1 class="title">research.</h1>
         <div class="color">
-            <image src="/projects/images/ccresearch1.png"></image>
-            <p>I did research on the history of computer science and created a timeline of important events. The information was organized on Milanote, a tool for organizing creative projects.</p>
+            <image src="/projects/images/gcresearch.png"></image>
+            <p>We gathered various regions of the world, and did a deep dive on the cultural values, stereotypes, and current events on each topic.</p>
         </div>
         <div class="typography">
-            <p>I also took a deep dive into the history of artificial intelligence as well as the most advanced current AI systems that are in use.</p>
-            <image src="/projects/images/ccresearch2.png"></image>
+            <p>For example, we researched about Bossa Nova in Brazil. We focused on the background, origin, composition, lyrics, artists, and contemporary connections.</p>
+            <image src="/projects/images/gcresearch2.png"></image>
         </div>
     </div>
 
-    <div class="figma">
-        <h1 class="title">asking an ai.</h1>
+    <!-- <div class="figma">
+        <h1 class="title">wireframing with figma.</h1>
         <p class="text">Since I was doing research about artificial intelligence, I was curious to see what an actual AI would think of the impact of creative coding to the world. I used ChatGPT, an advanced chatbot made by OpenAI.</p>
         <image src="/projects/images/ccai.png"></image>
     </div>
@@ -55,11 +55,11 @@
         <p class="text">Using ArcGIS Storymaps, I combined all of my research and analyses into an interactive storytelling experience.</p>
         <video src="/projects/images/ccvid.mov" autoplay muted loop></video>
         <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button2">view live</a>
-    </div>
+    </div> -->
 
     <div class="buttons">
-        <a href="oohlala.html">previous project</a>
-        <a href="foodymoody.html">next project</a>
+        <a href="foodymoody.html">previous project</a>
+        <a href="personal.html">next project</a>
     </div>
 
 
