--- a/projects/items/oohlala.html
+++ b/projects/items/oohlala.html
@@ -14,7 +14,7 @@
 
     <div class="intro">
         <div class="introtext">
-            <h1>OOH LA LA PANINI</h1>
+            <h1>Ooh La La Panini Website</h1>
             <h4>Ooh La La Panini is a small restaurant in Santa Clarita that specializes in gourmet café style food. The goal of this project was to create an interactive website that showcases their restaurant, as well as develop an ordering system for online purchases.</h4>
             <p>role: ui/ux design, web design, figma wireframing, branding guide, presentation</p>
             <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button">view live</a>
@@ -58,7 +58,7 @@
     </div>
 
     <div class="buttons">
-        <a href="">previous project</a>
+        <a href="/projects/items/sft.html">previous project</a>
         <a href="creativecoding.html">next project</a>
     </div>
 
