--- a/projects/projects.html
+++ b/projects/projects.html
@@ -63,7 +63,7 @@
                 <h2>Global Citizen</h2>
                 <h4>research, webflow, web design, digital storytelling</h4>
                 <p>Interactive curriculum that educates students about culture with modules about the languages, history, modern world connections, and stereotypes of different global regions</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/globalcitizen.html" class="button">my process</a>
                 <a href="https://www.figma.com/proto/ymlnzO5eSBXtQ9ctb6qyfw/home-page?node-id=306%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=306%3A3" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
@@ -79,7 +79,7 @@
                 <h2>Personal Website</h2>
                 <h4>html/css, javascript, figma wireframing, web dev</h4>
                 <p>Process of (this!) coded personal portfolio website — branding, typography, wireframing, and code</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/personal.html" class="button">my process</a>
                 <a href="alyssacheng.space" target="_blank" class="button">visit site</a>
             </div>
         </div>
@@ -89,7 +89,7 @@
                 <h2>Rise</h2>
                 <h4>research, product design, business pitch, web design</h4>
                 <p>New curriculum for elementary school students in SCV regarding sun protection and a hypothetical business pitch for a more accessible sunscreen product</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/rise.html" class="button">my process</a>
                 <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
@@ -105,7 +105,7 @@
                 <h2>Design Your World</h2>
                 <h4>html/css, collaborative web design, figma</h4>
                 <p>Website coded with a team that showcases students' 3-D designed "safe spaces" that represent escapism</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/dyw.html" class="button">my process</a>
                 <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">visit site</a>
             </div>
         </div>
@@ -115,7 +115,7 @@
                 <h2>SKIN — Web Developer</h2>
                 <h4>collaborative web design, figma</h4>
                 <p>Web platform for a project that exposes the racism and prejudice surrounding "disgusting" skin conditions</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/skin.html" class="button">my process</a>
                 <a href="https://www.figma.com/proto/XfMx7wfyetXT4hMZIBDXPO/design-your-world-website?node-id=1%3A2" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
@@ -131,7 +131,7 @@
                 <h2>3-D Modeled Miniature City</h2>
                 <h4>autodesk maya, arnold render, 3-D design</h4>
                 <p>Utilized Autodesk Maya Software to 3-D model, render, and animate a bus and a surrounding miniature city</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/3d.html" class="button">my process</a>
                 <a href="" target="_blank" class="button">visit site</a>
             </div>
         </div>
@@ -141,7 +141,7 @@
                 <h2>Skills For Tomorrow — Web Developer</h2>
                 <h4>collaborative web design, figma</h4>
                 <p>Curated virtual toolkit that aims to equip young people with the necessary resources and information that they need in order to navigate our rapidly-changing workforce and college</p>
-                <a href="/projects/items/oohlala.html" class="button">my process</a>
+                <a href="/projects/items/sft.html" class="button">my process</a>
                 <a href="https://shaunpaulthomas.wixsite.com/sixfeetskills" target="_blank" class="button">visit site</a>
             </div>
             <div class="image2">
