--- a/projects/items/creativecoding.html
+++ b/projects/items/creativecoding.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="wix">
-        <h1 class="title">putting it together.</h1>
+        <h1 class="title">demo.</h1>
         <p class="text">Using ArcGIS Storymaps, I combined all of my research and analyses into an interactive storytelling experience.</p>
         <video src="/projects/images/ccvid.mov" autoplay muted loop></video>
         <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button2">view live</a>
