--- a/projects/items/foodymoody.html
+++ b/projects/items/foodymoody.html
@@ -15,7 +15,7 @@
     <div class="intro">
         <div class="introtext">
             <h1>Foody Moody</h1>
-            <h4>A platform that allows users in Santa Clarita to search for local small businesses and specific cuisines based on a mood quiz</h4>
+            <h4>With a peer, I created an application that allows users in Santa Clarita to search for local small businesses and specific cuisines based on a mood quiz. This project focuses on small businesses, modern monopolies, authentic cuisines, and mental/physical health.</h4>
             <p>role: coding in react, javascript, html/css, yelp api, postman</p>
             <a href="https://foodymoodyscv.netlify.app/" target="_blank" class="button">view live</a>
             <a href="https://github.com/alyssacheng15/foodymoody" target="_blank" class="button button3">github repo</a>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="wix">
-        <h1 class="title">finalizing the code.</h1>
+        <h1 class="title">demo.</h1>
         <p class="text"></p>
         <video src="/projects/images/fmvid.mov" autoplay muted loop></video>
         <a href="https://foodymoodyscv.netlify.app/" target="_blank" class="button2">view live</a>
