--- a/projects/items/oohlala.html
+++ b/projects/items/oohlala.html
@@ -51,7 +51,7 @@
     </div>
 
     <div class="wix">
-        <h1 class="title">developing with wix.</h1>
+        <h1 class="title">demo.</h1>
         <p class="text">Since the owners had to continuously update the site and use the online ordering interface, we choose to develop the website with Wix.</p>
         <video src="/projects/images/oohlalavid.mov" autoplay muted loop></video>
         <a href="https://alyssaycheng157.wixsite.com/ooh-la-la-panini" target="_blank" class="button2">view live</a>
