--- a/projects/projects.html
+++ b/projects/projects.html
@@ -80,7 +80,7 @@
                 <h4>html/css, javascript, figma wireframing, web dev</h4>
                 <p>Process of (this!) coded personal portfolio website — branding, typography, wireframing, and code</p>
                 <a href="/projects/items/personal.html" class="button">my process</a>
-                <a href="alyssacheng.space" target="_blank" class="button">visit site</a>
+                <a href="/index.html" target="_blank" class="button">visit site</a>
             </div>
         </div>
 
