--- a/projects/items/globalcitizen.html
+++ b/projects/items/globalcitizen.html
@@ -48,14 +48,11 @@
         <h1 class="title">analyzing data.</h1>
         <image class="image" src="/projects/images/ccanalyze.png"></image>
         <p class="text">After gathering all the research, I analyzed the information regarding the ethics of AI. </p>
-    </div>
+    </div> -->
 
     <div class="wix">
-        <h1 class="title">putting it together.</h1>
-        <p class="text">Using ArcGIS Storymaps, I combined all of my research and analyses into an interactive storytelling experience.</p>
-        <video src="/projects/images/ccvid.mov" autoplay muted loop></video>
-        <a href="https://storymaps.arcgis.com/stories/09a0d47bb5304847bec6184cbe51a26a/preview" target="_blank" class="button2">view live</a>
-    </div> -->
+        <a href="https://www.figma.com/proto/ymlnzO5eSBXtQ9ctb6qyfw/home-page?node-id=306%3A3&scaling=scale-down&page-id=0%3A1&starting-point-node-id=306%3A3" target="_blank" class="button2">view live</a>
+    </div>
 
     <div class="buttons">
         <a href="foodymoody.html">previous project</a>
