add nav bar, clean up changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <img src="images/cover background.png">
     </div>
 
-    <div class="summary" id="summary">
+    <div class="summary" id="about">
         <div class="summary_image">
             <img src="images/placeholder.jpg">
         </div>
@@ -53,7 +53,23 @@
         <img src="images/squiggle.png">
     </div>
 
-    <div class="projects">
+    <div class="curiosities" id="skills">
+        <div class="title">
+             <h1>hard skills.</h1>
+             <p>technologies and tools that I use for my creations</p>
+        </div>
+ 
+        <div class="iconlist">
+         <image src="/images/row1.png"></image>
+         <image src="/images/row2.png"></image>
+        </div>
+     </div>
+
+     <div class="slant2">
+        <img src="images/slant2.png">
+    </div>
+
+    <div class="projects" id="projects">
         <!-- <div class="projects_image">
             <img src="images/projects.png">
         </div> -->
@@ -70,7 +86,6 @@
                 </div>
             </a>
         </div>
-
 
         <div class="image2">
             <img src="images/personal.png">
@@ -119,24 +134,8 @@
         </div>
     </div>
 
-    <div class="slant2">
-        <img src="images/slant2.png">
-    </div>
-
-    <div class="curiosities">
-       <div class="title">
-            <h1>hard skills.</h1>
-            <p>technologies and tools that I use for my creations</p>
-       </div>
-
-       <div class="iconlist">
-        <image src="/images/row1.png"></image>
-        <image src="/images/row2.png"></image>
-       </div>
-    </div>
-
     <footer>
-        <div class="footer_text">
+        <div class="footer_text" id="footer">
             <p>© 2022 | Designed and coded by Alyssa Cheng</p>
         </div>
         <div class="footer_icons">
