--- a/projects/items/globalcitizen.html
+++ b/projects/items/globalcitizen.html
@@ -12,6 +12,17 @@
 <body>
     <div class="cursor"></div>
 
+    <nav>
+        <ul id="nav_links" class="nav-links">
+            <a href="/index.html"><image src="/projects/images/logo.png"></image></a>
+            <li><a href="/index.html#about">about</a></li>
+            <li><a href="/index.html#skills">skills</a></li>
+            <li><a href="/index.html#projects">projects</a></li>
+            <li><a href="/index.html#footer">contact</a></li>
+            <li><a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">cv</a></li>
+        </ul>
+    </nav>
+    
     <div class="intro">
         <div class="introtext">
             <h1>Global Citizen</h1>
