--- a/projects/projects.html
+++ b/projects/projects.html
@@ -13,8 +13,20 @@
 
 <body>
     <div class="cursor"></div>
-
+    
     <div class="projects">
+
+        <nav>
+            <ul id="nav_links" class="nav-links">
+                <a href="/index.html"><image src="/projects/images/logoblue.png"></image></a>
+                <li><a href="/index.html#about">about</a></li>
+                <li><a href="/index.html#skills">skills</a></li>
+                <li><a href="/index.html#projects">projects</a></li>
+                <li><a href="/index.html#footer">contact</a></li>
+                <li><a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">cv</a></li>
+            </ul>
+        </nav>
+
         <h1 class="header">P R O J E C T S</h1>
 
         <div class="item" id="oohlala">
