--- a/projects/items/oohlala.html
+++ b/projects/items/oohlala.html
@@ -7,10 +7,22 @@
     <title>Ooh La La Panini</title>
     <link rel="stylesheet" href="oohlala.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Belleza&family=Judson&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/logo.png">
 </head>
 
 <body>
     <div class="cursor"></div>
+
+    <nav>
+        <ul id="nav_links" class="nav-links">
+            <a href="/index.html"><image src="/projects/images/logo.png"></image></a>
+            <li><a href="/index.html#about">about</a></li>
+            <li><a href="/index.html#skills">skills</a></li>
+            <li><a href="/index.html#projects">projects</a></li>
+            <li><a href="/index.html#footer">contact</a></li>
+            <li><a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">cv</a></li>
+        </ul>
+    </nav>
 
     <div class="intro">
         <div class="introtext">
