--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Belleza&family=Judson&display=swap" rel="stylesheet">
-    <link rel="icon" href="/images/favicon.webp">
+    <link rel="icon" href="/images/favicon.png">
 </head>
 
 <body>
@@ -25,6 +25,8 @@
 
     <div class="cover">
         <img src="images/cover background.png">
+        <iframe src='https://my.spline.design/miniroommusiccopy-5244fdf1e04ac8a080fb9ba7feaae1ac/' frameborder='0' width='100%' height='100%'></iframe>
+        <!-- <div class="blocker"></div> -->
     </div>
 
     <div class="summary" id="about">
@@ -139,16 +141,16 @@
             <p>© 2022 | Designed and coded by Alyssa Cheng</p>
         </div>
         <div class="footer_icons">
-            <a href="mailto:alyssaycheng15@gmail.com">
+            <a href="mailto:alyssaycheng15@gmail.com" target="_blank">
                 <image src="/images/mail.png"></image>
             </a>
-            <a href="tel:6612108098">
+            <a href="tel:6612108098" target="_blank">
                 <image src="/images/phone.png"></image>
             </a>
-            <a href="https://github.com/alyssacheng15">
+            <a href="https://github.com/alyssacheng15" target="_blank">
                 <image src="/images/github.png"></image>
             </a>
-            <a href="www.linkedin.com/in/alyssa-cheng">
+            <a href="https://www.linkedin.com/in/alyssa-cheng" target="_blank">
                 <image src="/images/linkedin.png"></image>
             </a>
         </div>
