--- a/projects/items/dyw.html
+++ b/projects/items/dyw.html
@@ -7,6 +7,7 @@
     <title>Design Your World</title>
     <link rel="stylesheet" href="dyw.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Belleza&family=Judson&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/favicon.png">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
             <a href="/index.html"><image src="/projects/images/logo.png"></image></a>
             <li><a href="/index.html#about">about</a></li>
             <li><a href="/index.html#skills">skills</a></li>
-            <li><a href="/index.html#projects">projects</a></li>
+            <li><a href="/projects/projects.html">projects</a></li>
             <li><a href="/index.html#footer">contact</a></li>
             <li><a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">cv</a></li>
         </ul>
@@ -27,7 +28,7 @@
         <div class="introtext">
             <h1>Design Your World</h1>
             <h4>With a team, I coded a website for a project called Design Your World, which displays students' 3-D modeled "safe spaces" in the ideology of escapism.</h4>
-            <p>role: coding in react, javascript, html/css, yelp api, postman</p>
+            <p>role: collaborative coding with html/css, figma wireframing</p>
             <a href="" class="button">view live</a>
             <a href="" class="button button3">github repo</a>
         </div>
@@ -64,23 +65,24 @@
 
 
     <footer>
-        <div class="footer_text">
+        <div class="footer_text" id="footer">
             <p>© 2022 | Designed and coded by Alyssa Cheng</p>
         </div>
         <div class="footer_icons">
-            <a href="mailto:alyssaycheng15@gmail.com">
+            <a href="mailto:alyssaycheng15@gmail.com" target="_blank">
                 <image src="/images/mail.png"></image>
             </a>
-            <a href="tel:6612108098">
+            <a href="tel:6612108098" target="_blank">
                 <image src="/images/phone.png"></image>
             </a>
-            <a href="https://github.com/alyssacheng15">
+            <a href="https://github.com/alyssacheng15" target="_blank">
                 <image src="/images/github.png"></image>
             </a>
-            <a href="www.linkedin.com/in/alyssa-cheng">
+            <a href="https://www.linkedin.com/in/alyssa-cheng" target="_blank">
                 <image src="/images/linkedin.png"></image>
             </a>
         </div>
+    
     </footer>
 
     <script src="/index.js"></script>
