--- a/projects/projects.html
+++ b/projects/projects.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@300&family=Belleza&family=Judson&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/favicon.png">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
                 <a href="/index.html"><image src="/projects/images/logoblue.png"></image></a>
                 <li><a href="/index.html#about">about</a></li>
                 <li><a href="/index.html#skills">skills</a></li>
-                <li><a href="/index.html#projects">projects</a></li>
+                <li><a href="/projects/projects.html">projects</a></li>
                 <li><a href="/index.html#footer">contact</a></li>
                 <li><a href="/images/Alyssa Cheng - Curriculum Vitae.pdf" target="_blank">cv</a></li>
             </ul>
@@ -165,23 +166,25 @@
 </div>
 
 <footer>
-    <div class="footer_text">
+    <div class="footer_text" id="footer">
         <p>© 2022 | Designed and coded by Alyssa Cheng</p>
     </div>
     <div class="footer_icons">
-        <a href="mailto:alyssaycheng15@gmail.com">
+        <a href="mailto:alyssaycheng15@gmail.com" target="_blank">
             <image src="/images/mail.png"></image>
         </a>
-        <a href="tel:6612108098">
+        <a href="tel:6612108098" target="_blank">
             <image src="/images/phone.png"></image>
         </a>
-        <a href="https://github.com/alyssacheng15">
+        <a href="https://github.com/alyssacheng15" target="_blank">
             <image src="/images/github.png"></image>
         </a>
-        <a href="www.linkedin.com/in/alyssa-cheng">
+        <a href="https://www.linkedin.com/in/alyssa-cheng" target="_blank">
             <image src="/images/linkedin.png"></image>
         </a>
     </div>
+
+</footer>
 
 </footer>
 
