--- a/projects/projects.html
+++ b/projects/projects.html
@@ -13,6 +13,15 @@
 </head>
 
 <body>
+    <div id="loader">
+        <script>
+            var loader = document.getElementById("loader");
+            window.addEventListener("load", function(){
+            loader.style.display = "none";
+        })
+        </script>
+    </div>
+
     <div class="cursor"></div>
     
     <div class="projects">
@@ -187,6 +196,8 @@
 </footer>
 
 </footer>
+
+
 
     <script src="/index.js"></script>
 </body>
