--- a/projects/items/globalcitizen.html
+++ b/projects/items/globalcitizen.html
@@ -11,6 +11,15 @@
 </head>
 
 <body>
+    <div id="loader">
+        <script>
+            var loader = document.getElementById("loader");
+            window.addEventListener("load", function(){
+            loader.style.display = "none";
+        })
+        </script>
+    </div>
+    
     <div class="cursor"></div>
 
     <nav>
